REVISION COMPLETTE AJOUTE OBJECT

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./MENU/stylehome.css" />
   <link rel="stylesheet" href="./CSS/score.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" media="screen and (max-width:700px)" href="/fichier/mobile.css"/>
+  <link rel="stylesheet" media="screen and (max-width:700px)" href="./CSS/mobile.css"/>
   <title>TicTacToe</title>
 </head>
 
@@ -34,8 +34,8 @@
         <!--Menu pas visible -->
         <div id="menu">
           <ul id="menuliste">
-            <!---<li><span id="CONNECT"></span></li>--->
-            <!---<li><span id="DISCONNECT">DISCONNECT</span></li>--->
+            <li><span id="LAUNCH">PLAY</span></li>
+            <li><span id="RESET">RESET</span></li>
             <li><a href="mailto:info@jeremy.best">MAIL</a></li>
             <li><a href="http://jeremy.best">CONTACT</a></li>
           </ul>
@@ -131,6 +131,7 @@
 </div>
 
 <script src="./java.js"></script>
+<script src="./game.js"></script>
 <script src="./MENU/javamenu.js"></script>
 
 
