--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./CSS/style.css" />
   <link rel="stylesheet" href="./MENU/stylemenu.css" />
-  <link rel="stylesheet" href="./MENU/stylehome.css" />
+  <link rel="stylesheet" href="./CSS/stylehome.css" />
   <link rel="stylesheet" href="./CSS/score.css" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Roboto:700&display=swap" rel="stylesheet">
   <link rel="stylesheet" media="screen and (max-width:700px)" href="./CSS/mobile.css"/>
   <title>TicTacToe</title>
 </head>
 
 <body id="body">
+
+        <div id="welcome">
+          <p>PLAY</p>
+            <div id="visibleTXT">
+              <div><p>GOOD</p></div>
+              <div><p>LOSE</p></div>
+              <div><p>BAD</p></div>
+            </div>
+          <p>GAME</p>
+        </div>
 
 
         <!--En haut position : fixed -->
@@ -130,8 +140,8 @@
   </div>
 </div>
 
-<script src="./java.js"></script>
 <script src="./game.js"></script>
+<script src="./html.js"></script>
 <script src="./MENU/javamenu.js"></script>
 
 
