Ajout de la demande du pseudo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div id="scorecenter"><p></p></div>
   <div id="player2">
     <p id="player2S">00</p>
-    <p id="player2J">Player2</p>
+    <p id="player2J">AI</p>
   </div>
 
 </div>
